# project-jumpstart

./: .gitignore  CLAUDE.md  README.md  claude-code-copilot-desktop-spec-v2.md  index.html  landing-page-copy.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
.claude/: settings.json
docs/: reddit-post-draft-2026-02-03.md  user-guide.md
e2e/: agents.spec.ts  claude-md.spec.ts  context-health.spec.ts  dashboard.spec.ts  enforcement.spec.ts  help.spec.ts  hooks-setup.spec.ts  memory.spec.ts  modules.spec.ts  navigation.spec.ts  onboarding.spec.ts  performance.spec.ts  ralph.spec.ts  settings.spec.ts  skills.spec.ts  tauri-mocks.ts  team-templates.spec.ts  test-plans.spec.ts
playwright-report/: index.html
scripts/: build-dmg.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: activity.rs  agents.rs  claude_md.rs  context.rs  enforcement.rs  freshness.rs  kickstart.rs  memory.rs  mod.rs  modules.rs  onboarding.rs  performance.rs  project.rs  ralph.rs  session_analysis.rs  settings.rs  skills.rs  team_templates.rs  test_plans.rs  watcher.rs
src-tauri/src/core/: ai.rs  analyzer.rs  crypto.rs  freshness.rs  generator.rs  health.rs  mod.rs  performance.rs  scanner.rs  test_runner.rs  watcher.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/models/: agent.rs  context.rs  enforcement.rs  memory.rs  mod.rs  module_doc.rs  performance.rs  project.rs  ralph.rs  skill.rs  team_template.rs  test_plan.rs
test-results/: .last-run.json
(+209 files in other folders)
