[package]
name = "claude-code-copilot"
version = "0.1.0"
description = "Desktop app that automatically applies and enforces Claude Code best practices"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_code_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json"] }
